--- a/test.html
+++ b/test.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css.map">
     <link rel="stylesheet" type="text/css" href="css/capsule.css">
 
+    <style type="text/css">
+        html {
+            background-color: #ddffee;
+        }
+    </style>
+
 </head>
 <body>
     <section class="hero is-primary is-bold">
