Added support for textarea element

--- a/test.html
+++ b/test.html
@@ -51,6 +51,12 @@
                         <td> <input type="text" class="cc-ctrl cc-red" placeholder="Type here..."> </input> </td>
                     </tr>
                     <tr>
+                        <td> Text area </td>
+                        <td> <textarea class="cc-ctrl cc-mono" placeholder="Type here..."> </textarea> </td>
+                        <td> <textarea class="cc-ctrl cc-bulma" placeholder="Type here..."> </textarea> </td>
+                        <td> <textarea class="cc-ctrl cc-red" placeholder="Type here..."> </textarea> </td>
+                    </tr>
+                    <tr>
                         <td> Button </td>
                         <td> <input class="cc-ctrl cc-mono" type="button" value="Click here"></input> </td>
                         <td> <input class="cc-ctrl cc-bulma" type="button" value="Click here"></input> </td>
